# aenzbi-app-flutter

./: .bash_history  .flutter-plugins  .flutter-plugins-dependencies  .gitconfig  README.md  automated_file.txt  index.js  package-lock.json  pubspec.yaml
.cache/cloud-code/: install_id.txt
.codeoss/data/: token
.config/configstore/: firebase-tools.json  update-notifier-firebase-tools.json
.dart/: dartdev.json
.dart-tool/: CLIENT_ID  dart-flutter-telemetry-session.json  dart-flutter-telemetry.config
.dartServer/.instrumentation/: uuid.txt
.dart_tool/: package_config.json  package_config_subset
.dart_tool/extension_discovery/: vs_code.json
.github/workflows/: firebase-deploy.yml
aenzbi-app-flutter/: pubspec.yaml
aenzbi-app-flutter/lib/: main.dart
aenzbi-app-flutter/linux/: CMakeLists.txt  aenzbi_app_flutter.desktop  main.cc
aenzbi_backend/aenzbi_backend/: settings.py
aenzbi_backend/banking/: models.py  urls.py  views.py
aenzbi_frontend/: README.md  pubspec.yaml
aenzbi_frontend/lib/: main.dart
aenzbi_frontend/linux/: CMakeLists.txt  my_application.cc
aenzbi_frontend/test/: widget_test.dart
aenzbi_frontend/web/: index.html  manifest.json
aenzbi_frontend/windows/: CMakeLists.txt
ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
itsupport/: pubspec.yaml
lib/: main.dart
lib/database/: database_helper.dart
lib/models/: car.dart  invoice.dart  product.dart  sale.dart
lib/modules/: business_module.dart
lib/screens/: car_detail_screen.dart  car_inventory_screen.dart  home_screen.dart  inventory_screen.dart  (+1 more)
(+229 files in other folders)
